--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
         <title>Web</title>
     </head>
     <body>
-        Привет, мир!
+        <img src="./gerbtspu118.png">
+        <ul>
+            <li>
+                html
+                <ol>
+                    <li>Конспект</li>
+                    <li>Задания</li>
+                </ol>
+            </li>
+            <li><a href="./css.html">css</a></li>
+        </ul>
+        <h1>Web</h1>
+        <h2>html</h2>
+        <p>Язык разметки страниц, см
+            <a href="htpp://ru.mikipedia.org/wiki/HTML">html</a>
+            Привет, мир!
+        </p>
+
     </body>
 </html>
